# spending-transaction-monitor

./: .dockerignore  .env.example  .gitignore  .npmrc  AppleSiliconPodmanSetup.md  JIRA_USER_STORE.md  Makefile  PR_DESCRIPTION.md  README.md  env.development.example  env.example  env.production.example  nginx.conf  package.json  pnpm-lock.yaml  podman-compose.build.yml  podman-compose.yml  run-config.yaml
.github/workflows/: coverage-e2e.yml
.husky/: pre-commit  pre-push
data/: README.md  sample_user_alerts.csv  sample_users.csv
deploy/: DEPLOYMENT_GUIDE.md  OPENSHIFT_DEPLOYMENT.md  QUICKSTART.md
deploy/helm/: DEPLOYMENT.md
docs/: DEVELOPER_GUIDE.md  KEYCLOAK_MANAGEMENT.md  KEYCLOAK_OPERATOR.md
docs/auth/: INTEGRATION.md
ml-pipeline/alert-recommender-pipeline/: Containerfile  README.md  build.yaml  pyproject.toml
ml-pipeline/alert-recommender-pipeline/src/: requirements.txt
ml-pipeline/alert-recommender-pipeline/src/alert_recommender_pipeline/: __init__.py  k8s.py  main.py  models.py
ml-pipeline/alert-recommender-pipeline/src/alert_recommender_pipeline/pipelines/: __init__.py  pipelines.py  tasks.py
ml-pipeline/alert-recommender-pipeline/src/alert_recommender_pipeline/pipelines/tasks/: __init__.py  constants.py  data_tasks.py  deployment_tasks.py  mlserver_model.py  registry_tasks.py  storage_tasks.py  training_tasks.py
ml-pipeline/deployment/: deploy.sh  inference-service.yaml  minio.yaml  rbac.yaml  serving-runtime.yaml  storage-config.yaml.template
ml-pipeline/notebooks/: 1_train_alert_model.ipynb  2_save_model.ipynb  3_deploy_model.ipynb  (+1 more)
scripts/: README.md  check-dev-ports.sh
(+45 files in other folders)
