[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alert-recommender-pipeline"
version = "0.1.0"
description = "Kubeflow pipeline for training and deploying alert recommendation models"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "kfp>=2.7.0",
    "kubernetes>=29.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0,<2.0",  # Must be <2.0 for MLServer sklearn compatibility
    "scikit-learn>=1.4.0,<1.7.0",  # Must match MLServer sklearn version
    "cloudpickle>=3.0.0",  # For serializing custom classes
    "joblib>=1.3.0",  # MLServer uses joblib for loading
    "boto3>=1.34.0",
    "psycopg2-binary>=2.9.0",  # PostgreSQL database driver for training data
    "pydantic>=2.6.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
